--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.13.1",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react-native": "^0.75.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
